# npk

./: Cargo.toml  config.toml  init.sh  npk.yml
.githooks/: pre-commit
src/: config.rs  installer.rs  main.rs
