[package]
name = "npk"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lratt/npk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.17", features = ["cargo"] }
git2 = "0.14.3"
home = "0.5.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
termcolor = "1.1.3"
